# NarrativeAI

./: docker-compose.yaml  dockerfile  pyproject.toml
app/: __init__.py  main.py
app/llm/: models.py  states.py  workflow.py
app/llm/agents/: __init__.py  retriever.py
narrativeai/: main.py  run-completion.py  run-interactive.py
narrativeai/api/: __init__.py  api.py  config.py  database.py  dependencies.py
narrativeai/api/genre/: database.py  router.py  schema.py
narrativeai/api/story/: database.py  router.py  schema.py  services.py
narrativeai/api/template/: database.py  router.py  schema.py  services.py
narrativeai/api/user/: database.py  router.py  schema.py  services.py
narrativeai/api/utils/: logging.py
narrativeai/config/: llm.py
narrativeai/llm/: __init__.py  llm.py  models.py  states.py  utils.py  workflow.py
narrativeai/llm/agents/: longterm_plotter.py  longterm_plotter_agent.py  memory_agent.py  narrative_agent.py  planning_agent.py  writer.py  writer_agent.py
narrativeai/llm/agents/tools/: context_vector_db.py  neo4j.py
