[tool.poetry]
name = "narrativeai"
version = "0.1.0"
description = ""
authors = ["Jittabun <jj2jom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-openai = "^0.3.0"
langchain-community = "^0.3.14"
langgraph = "^0.2.62"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
