[tool.poetry]
name = "narrativeai"
version = "0.1.0"
description = ""
authors = ["Jittabun <jj2jom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-openai = "^0.3.0"
langchain-community = "^0.3.14"
langgraph = "^0.2.62"
langchain-neo4j = "^0.2.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "narrativeai.api.api:start_dev_server"